nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__fail_windows_nt_status_no_message.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "fail",
  "failure": {
    "kind": "abort",
    "abort": {
      "kind": "windows-nt-status",
      "code": -1073741819,
      "message": null
    }
  },
  "leaked": false
}
