nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__leak_fail.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "leak",
  "result": "fail"
}
