nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__leak_pass.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "leak",
  "result": "pass"
}
